RESOLVED FIXED73434
MacroAssemblerSH4 does not implement readCallTarget
https://bugs.webkit.org/show_bug.cgi?id=73434
Summary MacroAssemblerSH4 does not implement readCallTarget
Csaba Osztrogonác
Reported 2011-11-30 05:00:38 PST
It is blocker bug, beacuse after http://trac.webkit.org/changeset/101457 Qt-SH4 build is broken. (and all other MIPS build of course)
Attachments
speculative patch (1.83 KB, patch)
2011-12-01 04:00 PST, Zoltan Herczeg
no flags
another attempt (2.50 KB, patch)
2011-12-05 00:39 PST, Zoltan Herczeg
no flags
Zoltan Herczeg
Comment 1 2011-12-01 04:00:36 PST
Created attachment 117392 [details] speculative patch Could someone who has such machine try this fix first?
thouraya
Comment 2 2011-12-02 00:44:53 PST
Hi, I'll try it today. Regards, Thouraya. (In reply to comment #1) > Created an attachment (id=117392) [details] > speculative patch > > Could someone who has such machine try this fix first?
thouraya
Comment 3 2011-12-02 06:41:00 PST
Hi, 1509 static FunctionPtr readCallTarget(CodeLocationCall call) >> CodeLocationCall not defined in SH4Assembler.h 1510 { 1511 uint16_t* instructionPtr = call.dataLocation(); 1512 instructionPtr -= 3; 1513 uint32_t addr = readPCrelativeAddress((*instructionPtr & 0xff), instructionPtr) >> missed ; 1514 return FunctionPtr(reinterpret_cast<void(*)()>(addr); >> missed ) 1515 } Regard, Thouraya.
Zoltan Herczeg
Comment 4 2011-12-02 07:08:05 PST
Does it work (except the typos)?
thouraya
Comment 5 2011-12-02 07:09:38 PST
Yes it works. (In reply to comment #4) > Does it work (except the typos)?
Csaba Osztrogonác
Comment 6 2011-12-02 08:28:03 PST
Comment on attachment 117392 [details] speculative patch r=me with fixing typos mentioned in Comment #3
Csaba Osztrogonác
Comment 7 2011-12-02 08:31:14 PST
Comment on attachment 117392 [details] speculative patch Landed with typo fixes in http://trac.webkit.org/changeset/101801
Csaba Osztrogonác
Comment 8 2011-12-02 09:03:33 PST
Reopen, because build is still broken: ../../../../Source/JavaScriptCore/assembler/SH4Assembler.h:1509:39: error: 'CodeLocationCall' has not been declared../../../../Source/JavaScriptCore/assembler/SH4Assembler.h: In static member function 'static JSC::FunctionPtr JSC::SH4Assembler::readCallTarget(int)': ../../../../Source/JavaScriptCore/assembler/SH4Assembler.h:1511:41: error: request for member 'dataLocation' in 'call', which is of non-class type 'int' It would be better if we make a similar change to ARM and MIPS: - http://trac.webkit.org/changeset/101658 - http://trac.webkit.org/changeset/101473
Zoltan Herczeg
Comment 9 2011-12-02 09:38:30 PST
CodeLocationCall is an int???
Eric Seidel (no email)
Comment 10 2011-12-02 15:17:01 PST
Zoltan Herczeg
Comment 11 2011-12-02 22:30:10 PST
../../../../Source/JavaScriptCore/jit/JITPropertyAccess.cpp: In static member function 'static bool JSC::JIT::isDirectPutById(JSC::StructureStubInfo*)': ../../../../Source/JavaScriptCore/jit/JITPropertyAccess.cpp:1160:25: error: 'readCallTarget' is not a member of 'JSC::MacroAssembler' So I put it into a wrong file. We should move it to MacroAssemblerSH4.
Zoltan Herczeg
Comment 12 2011-12-05 00:39:47 PST
Created attachment 117853 [details] another attempt
Csaba Osztrogonác
Comment 13 2011-12-05 00:41:39 PST
Comment on attachment 117853 [details] another attempt Let's see, r=me.
Csaba Osztrogonác
Comment 14 2011-12-05 01:41:15 PST
Comment on attachment 117853 [details] another attempt Clearing flags on attachment: 117853 Committed r101980: <http://trac.webkit.org/changeset/101980>
Csaba Osztrogonác
Comment 15 2011-12-05 01:41:24 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.