MacroAssemblerSH4 does not implement readCallTarget https://bugs.webkit.org/show_bug.cgi?id=73434

Patch by Zoltan Herczeg <zherczeg@webkit.org> on 2011-12-02
Reviewed by Csaba Osztrogonác.

* assembler/SH4Assembler.h:
(JSC::SH4Assembler::readCallTarget): Support for SH4.

Canonical link: https://commits.webkit.org/90272@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101801 268f45cc-cd09-0410-ab3c-d52691b4dbfc